# bruja

./: .dockerignore  .gitignore  .mise.toml  Cargo.toml  Cross.toml  Makefile.toml  README.md  chain.scale  todo.txt
.github/workflows/: ci.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/catalog/tests/: e2e.rs  test_e2e.rs
crates/clis/: Cargo.toml
crates/clis/requester/: Cargo.toml
crates/clis/requester/src/: config.rs  error.rs  main.rs
crates/clis/requester/src/commands/: mod.rs  submit_job.rs
crates/clis/requester/src/controller/: requester.rs  submit_job.rs
crates/clis/src/: lib.rs
crates/clis/worker/: Cargo.toml
crates/clis/worker/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/clis/worker/src/commands/: mod.rs  register.rs  start.rs
crates/clis/worker/src/controller/: job.rs  mod.rs  worker.rs
crates/contract/: Cargo.toml  build.rs  lib.rs
crates/contract/src/: lib.rs
crates/contract_abi/: Cargo.toml
crates/contract_abi/src/: lib.rs
crates/foo/: Cargo.toml
crates/foo/src/: main.rs  primitives.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs  test_utils.rs  utils.rs
crates/integration_tests/test_macro/: Cargo.toml
crates/integration_tests/test_macro/src/: lib.rs
crates/integration_tests/tests/p2p/: test.rs
crates/integration_tests/tests/requester_worker/: start_tests.sh  test.rs  work_bg.wasm
crates/node/: Cargo.toml
crates/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
crates/node/src/commands/: start.rs
crates/requester/: Cargo.toml
crates/requester/src/: cli.rs  config.rs  error.rs  main.rs
crates/requester/src/commands/: submit_job.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: assets_config.rs  lib.rs  runtime_apis.rs
crates/runtime/src/configs/: contracts.rs
crates/scripts/: Cargo.toml
crates/scripts/src/: cli.rs  main.rs
crates/scripts/src/commands/: foo.rs  instantiate.rs  mod.rs  p2p.rs  wasm_time.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  test_utils.rs
crates/tests/test_macro/: Cargo.toml
crates/tests/test_macro/src/: lib.rs
crates/tests/tests/: integration.rs  integration_tests.rs  work_bg.wasm  work_pg.wat
crates/tests/tests/p2p/: integration.rs
crates/tests/tests/requester_worker/: integration.rs
crates/utils/: Cargo.toml
crates/utils/src/: client.rs  contract_client.rs  ink_project.rs  lib.rs  networking.rs  p2p.rs  substrate_client.rs
crates/utils/src/services/: contract_client.rs  job.rs  mod.rs  p2p.rs
crates/utils/src/services/job/: job_builder.rs  job_handler.rs  job_runner.rs  mod.rs  test_job_builder.rs  test_job_handler.rs  test_job_runner.rs
crates/worker/: Cargo.toml
crates/worker/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/worker/src/commands/: register.rs  start.rs
crates/worker/src/services/: job.rs
docker/: Dockerfile  bruja.Dockerfile  bruja_builder.Dockerfile  build.sh  compose.yml
