[workspace.package]
authors = ["Omar"]
edition = "2021"
version = "0.40.0"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
rust-version = "1.77"

[workspace]
resolver = "2"
members = [
	"crates/node",
	"crates/runtime",
	"crates/contract",
]

[profile.release]
panic = 'unwind'
