[workspace.package]
authors = ["Omar"]
edition = "2021"
version = "0.0.14"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"

[workspace]
resolver = "2"
members = [
	"crates/node",
	"crates/runtime",
	"crates/catalog",
	"crates/utils", "crates/worker", "crates/scripts", "crates/requester",
]

[workspace.dependencies]
clap = { version = "4.5.3" }
docify = { version = "0.2.8" }
futures = { version = "0.3.30" }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.23.2" }
serde_json = { version = "1.0.114", default-features = false }
serde = { version = "1.0.204", default-features = false }
frame = { version = "0.4.0", default-features = false, package = "polkadot-sdk-frame" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false }
scale-value = { version = "0.14.1", default-features = false }
thiserror = { version = "1.0.63" }
anyhow = { version = "1.0.86" }
ink = { version = "5.0.0", default-features = false }
tokio = { version = "1.37.0" }
hex = { version = "0.4.3", default-features = false }
ink_env = "5.0.0"
subxt = "0.35.3"
subxt-signer = "0.35.3"
wasmtime = "25.0.1"

sc-cli = { version = "0.44.0", default-features = false }
sc-executor = { version = "0.39.0", default-features = false }
sc-network = { version = "0.42.0", default-features = false }
sc-service = { version = "0.43.0", default-features = false }
sc-telemetry = { version = "22.0.0", default-features = false }
sc-transaction-pool = { version = "35.0.0", default-features = false }
sc-transaction-pool-api = { version = "35.0.0", default-features = false }
sc-consensus = { version = "0.41.0", default-features = false }
sc-consensus-manual-seal = { version = "0.43.0", default-features = false }
sc-rpc-api = { version = "0.41.0", default-features = false }
sc-basic-authorship = { version = "0.42.0", default-features = false }
sc-offchain = { version = "37.0.0", default-features = false }
sc-client-api = { version = "35.0.0", default-features = false }

sp-timestamp = { version = "33.0.0", default-features = false }
sp-keyring = { version = "38.0.0", default-features = false }
sp-api = { version = "33.0.0", default-features = false }
sp-blockchain = { version = "35.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-tracing = { version = "17.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }

pallet-balances = { version = "36.0.0", default-features = false}
pallet-sudo = { version = "35.0.0", default-features = false}
pallet-timestamp = { version = "34.0.0", default-features = false }
pallet-transaction-payment = { version = "35.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "35.0.0", default-features = false }
pallet-contracts = { version = "34.0.0", default-features = false }

substrate-frame-rpc-system = { version = "36.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-wasm-builder = { version = "23.0.0", default-features = false }

runtime = { path = "crates/runtime" }
catalog = { path = "crates/catalog"}
utils = { path = "crates/utils"}
