[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
authors = ["Omar"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
	"serde",
] }
codec = { workspace = true, features = ["derive"] }

[dev-dependencies]
utils = { workspace = true }
ink_env = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true }

tokio = { version = "1.37.0" }
rand = "0.8.5"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[[test]]
name = "test_e2e"
test = false