[package]
name = "catalog"
version = "0.0.1"
edition = "2021"
authors = ["Omar"]

[dependencies]
ink = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
	"serde",
] }
codec = { workspace = true, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[[test]]
name = "e2e"
path = "tests/test_e2e.rs"
test = false
