[package]
name = "clis"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
utils = { workspace = true }
catalog = { workspace = true }
libp2p = { workspace = true }
