[package]
name = "contract"
version = "0.1.0"
edition = "2021"
authors = ["foo"]

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.0"
tokio = "1.37.0"
subxt = "0.35.3"
wabt = "0.10.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
