[package]
name = "contract"
version = "0.1.0"
edition = "2021"
authors = ["foo"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
	"serde",
] }

[dev-dependencies]
tokio = { version = "1.37.0" }
subxt = { version = "0.35.3" }
wabt = "0.10.0"
subxt-signer = "0.35.3"
rand = "0.8.5"

[build-dependencies]
substrate-wasm-builder = { version = "22.0.0", optional = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
	"substrate-wasm-builder",
]
ink-as-dependency = []
e2e-tests = []
