[package]
name = "foo"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0" , features = ["rt-multi-thread"]}
subxt-signer = "0.35.3"
rand = "0.8.5"
contract-transcode = "4.1.1"
contract-extrinsics = "4.1.1"

serde_json = { workspace = true }
serde = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
frame = { features = [
	"experimental",
	"runtime",
], workspace = true }

[features]
default = ["std"]
std = [
	"frame/std",
]
