[package]
name = "integration_tests"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing-subscriber = { workspace = true , features = ["json"] }
tracing = { workspace = true, features = ["attributes"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
subxt-signer = { workspace = true }
subxt = { workspace = true }
ink_env = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
libp2p = { workspace = true }
codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
test_macro = { path = "./test_macro" }

worker = { workspace = true }
requester = { workspace = true }
utils = { workspace = true }

[features]
integration_tests = []

[[test]]
name = "requester_worker"
path = "tests/requester_worker/test.rs"
test = false

[[test]]
name = "p2p"
path = "tests/p2p/test.rs"
test = false
