[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime" }
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.59"
serde_json = "1.0.117"
futures = "0.3.30"
jsonrpsee = { version = "0.22", features = ["server"] }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-block-builder = { workspace = true }
sp-api = { workspace = true }
sp-timestamp = { version = "29.0.0" }
sp-blockchain = { version = "31.0.0" }

sc-service = { workspace = true }
sc-cli = { version = "0.39.0" }
sc-client-api = { version = "31.0.0" }
sc-executor = { version = "0.35.0" }
sc-telemetry = { version = "17.0.0" }
sc-transaction-pool = { version = "31.0.0" }
sc-transaction-pool-api = { version = "31.0.0" }
sc-consensus = { version = "0.36.0" }
sc-consensus-manual-seal = { version = "0.38.0", default-features = false }
sc-network = { version = "0.37.0" }
sc-offchain = { version = "32.0.0" }
sc-basic-authorship = { version = "0.37.0" }
sc-rpc = { version = "32.0.0" }

pallet-transaction-payment-rpc = { version = "33.0.0" }

substrate-frame-rpc-system = { version = "31.0.0" }
