[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
bounded-collections = {version = "0.2.0", default-features = false }

pallet-contracts = { version = "30.0.0", default-features = false }
pallet-timestamp = { version = "30.0.0", default-features = false }
pallet-transaction-payment = { version = "31.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "31.0.0", default-features = false }
pallet-balances = { version = "31.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "19.0.0", default-features = false }

frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
frame-executive = { version = "31.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "29.0.0", default-features = false }

sp-runtime = { version = "34.0.0", default-features = false }
sp-version = { version = "32.0.0", default-features = false }
sp-api = { version = "29.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-block-builder = { version = "29.0.0", default-features = false }
sp-inherents = { version = "29.0.0", default-features = false }
sp-transaction-pool = { version = "29.0.0", default-features = false }
sp-offchain = { version = "29.0.0", default-features = false }
sp-session = { version = "30.0.0", default-features = false }
sp-weights = { version = "30.0.0", default-features = false }
sp-genesis-builder = { version = "0.10.0", default-features = false }

polkadot-runtime-common = { version = "10.0.0", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "bounded-collections/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-contracts/std",
    "pallet-timestamp/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-insecure-randomness-collective-flip/std",
    "sp-runtime/std",
    "sp-version/std",
    "sp-api/std",
    "sp-core/std",
    "sp-std/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-weights/std",
    "sp-genesis-builder/std",
    "polkadot-runtime-common/std"
]