[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
bounded-collections = {workspace = true }

pallet-contracts = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-balances = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

sp-runtime = { workspace = true }
sp-version = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-block-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-weights = { workspace = true }
sp-genesis-builder = { workspace = true }

polkadot-runtime-common = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "20.0.0", optional = true}

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "bounded-collections/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-contracts/std",
    "pallet-timestamp/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-insecure-randomness-collective-flip/std",
    "sp-runtime/std",
    "sp-version/std",
    "sp-api/std",
    "sp-core/std",
    "sp-std/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-weights/std",
    "sp-genesis-builder/std",
    "polkadot-runtime-common/std",
    "substrate-wasm-builder",
]