[package]
name = "runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.1"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame = { features = [
	"experimental",
	"runtime",
], workspace = true }

# pallets that we want to use
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-contracts = { workspace = true }

# genesis builder that allows us to interact with runtime genesis config
sp-genesis-builder = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame/std",

	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-contracts/std",

	"sp-genesis-builder/std",
	"sp-runtime/std",

	"substrate-wasm-builder",
]
