[package]
name = "scripts"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
catalog = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
subxt-signer = { workspace = true, features = ["subxt"] }
subxt = { workspace = true }
ink_env = { workspace = true }

ink = { workspace = true }
contract-extrinsics = "4.1.1"

