[package]
name = "scripts"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
catalog = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
subxt-signer = { workspace = true, features = ["subxt"] }
subxt = { workspace = true }

ink = { workspace = true }
wasmtime = { workspace = true }

libp2p = { workspace = true, features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
futures = { workspace = true }
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { workspace = true , features = ["env-filter"] }
tracing = { workspace = true }
