[package]
name = "tests"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing-subscriber = { workspace = true , features = ["json"] }
tracing = { workspace = true, features = ["attributes"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
subxt-signer = { workspace = true }
subxt = { workspace = true }
ink_env = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test_macro = { path = "./test_macro" }
rand = { workspace = true }

worker = { workspace = true }
requester = { workspace = true }
utils = { workspace = true }

[[test]]
name = "requester_worker"
path = "tests/requester_worker/integration.rs"
test = false

[[test]]
name = "p2p"
path = "tests/p2p/integration.rs"
test = false
