[package]
name = "utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true, features = ["subxt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
codec = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
rand = { workspace = true }
libp2p = { workspace = true, features = ["tcp", "tls", "dns", "noise", "yamux", "websocket", "ping", "macros", "mdns", "tokio", "gossipsub"] }
futures = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

pallet-contracts = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"ink/std",
	"pallet-contracts/std",
	"sp-runtime/std",
	"sp-weights/std",
]