[package]
name = "utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true, features = ["subxt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
codec = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "sync"] }
# tokio-stream = "0.1.16"
rand = { workspace = true }
libp2p = { workspace = true, features = ["tcp", "tls", "dns", "yamux", "websocket", "macros", "mdns", "tokio", "gossipsub", "request-response", "cbor", "quic"] }
futures = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime = { workspace = true }
pallet-contracts = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

catalog = { workspace = true }
async-stream = "0.3.6"

[features]
default = ["std"]
std = [
	"ink/std",
	"pallet-contracts/std",
	"sp-runtime/std",
	"sp-weights/std",
]
