[package]
name = "requester"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
catalog = { workspace = true }

clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
subxt-signer = { workspace = true }
subxt = { workspace = true }
ink_env = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true, features = ["attributes"] }

clis = { path = "../" }
